<resources>
    <string name="app_name">Wicket</string>
    <string name="toast_select_device">Select device</string>
    <string name="toast_enter_command">Please enter command</string>
    <string name="add">Add</string>
    <string name="toast_bluetooth_not_supported">Bluetooth not supported by device</string>
    <string name="select_device">Select Device</string>
    <string name="enter_widget_title">Enter Widget Title</string>
    <string name="select_command">Select Command</string>
    <string name="cr">CR</string>
    <string name="lf">LF</string>
    <string name="crlf">CR/LF</string>
    <string name="empty_line_ending">NONE</string>
    <string name="enter_command">Enter Command</string>
    <string name="send">Send</string>
    <string name="save">Save</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="find_devices">Find Devices</string>
    <string name="searching">Searching…</string>
    <string name="enable_bluetooth">Enable Bluetooth</string>
    <string name="pair">Pair</string>
    <string name="device_not_connected">Device not connected</string>
    <string name="bluetooh_connection">Bluetooth Connection</string>
    <string name="connecting">Connecting…</string>
    <string name="disconnecting">Disconnecting…</string>
    <string name="disconnect_first_toast">Disconnect before connecting to another device!</string>
    <string name="create_pattern">Create Pattern</string>
    <string name="pattern_name">Pattern Name:</string>
    <string name="enter_pattern_name">Enter Pattern Name</string>
    <string name="initial_delay">Initial delay:</string>
    <string name="disconnect_after_commands">Disconnect after commands:</string>
    <string name="commands">Commands:</string>
    <string name="enter_delay">Enter delay (s)</string>
    <string name="enter_pattern_name_toast">Enter pattern name!</string>
    <string name="invalid_initial_delay_toast">Initial delay should be between 0 an 60 seconds!</string>
    <string name="add_command_toast">Add some command!</string>
    <string name="enter_command_text_toast">Command should not be empty!</string>
    <string name="invalid_delay_toast">Delay should be between 0 an 60 seconds!</string>
    <string name="unsent">Unsent</string>
    <string name="OK">OK</string>
    <string name="delete_messages_title">Delete messages?</string>
    <string name="delete_messages_text">Are you sure you want to delete all messages for this device?</string>
</resources>
