<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/configure_device_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/simple_button_selector"
        android:padding="10dp"
        android:text="@string/select_device"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/widget_configurator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/appwidget_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/simple_edit_text_selector"
            android:gravity="center"
            android:hint="@string/enter_widget_title"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorGrayText"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/command_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/simple_edit_text_selector"
                android:gravity="center"
                android:hint="@string/select_command"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorGrayText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="4"
                android:background="@drawable/simple_button_selector"
                android:gravity="center"
                android:text="CR/LF"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="15sp" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/commands_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/simple_button_idle"
            android:padding="25dp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/simple_button_selector"
            android:text="@string/add_widget"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>